--- a/application/templates/events/new.html
+++ b/application/templates/events/new.html
@@ -1,27 +1,35 @@
-{% extends "layout.html" %}
-  
-{% block body %}
+{% extends "layout.html" %} {% block body %}
 <form method="POST" action="{{ url_for('events_create') }}">
-    <label for=name>Tapahtuman nimi</label>
-    <input type="text" name="name" />
-    <br>
+  <table>
+    <tr>
+      <td>{{ form.name.label }}</td>
+      <td>{{ form.name }}</td>
+      <td>
+	  <ul>
+	    {% for error in form.name.errors %}
+	    <li>{{ error }}</li>
+	    {% endfor %}
+	  </ul>
+	</td>
 
-    <label for=location>Tapahtuman sijainti</label>
-    <input type="text" name="location" />
-    <br>
+    </tr>
+    <tr>
+      <td>{{ form.location.label }}</td>
+      <td>{{ form.location }}</td>
+      <td>
+	  <ul>
+	    {% for error in form.location.errors %}
+	    <li>{{ error }}</li>
+	    {% endfor %}
+	  </ul>
+	</td>
 
-    <label for=attendee_max>Osallistujamäärä korkeintaan</label>
-    <input type="number" name="attendee_max" />
-    <br>
-
-    <label for=attendee_min>Osallistujamäärä, jotta tapahtuma järjestetään (valinnainen)</label>
-    <input type="number" name="attendee_min" />
-    <br>
-
-    <label for=date_time>Aika</label>
-    <input type="date" name="date_time" />
-    <br>
-
-    <input type="submit" value="Add a new event"/>
+    </tr>
+    <tr>
+      <td colspan="2">
+        <input type="submit" value="Add a new task" />
+      </td>
+    </tr>
+  </table>
 </form>
 {% endblock %}
