--- a/application/templates/events/list.html
+++ b/application/templates/events/list.html
@@ -6,12 +6,14 @@
       <th>Tapahtuma</th>
       <th>Sijainti</th>
       <th>Osallistujia</th>
+      <th>Ajankohta</th>
     </tr>
     {% for event in events %}
     <tr>
       <td>{{ event.name }}</td>
       <td>{{ event.location }}</td>
       <td>{{ event.attendandees }}</td>
+      <td>{{ event.date_time }}</td>
     </tr>
     {% endfor %}
   </table>
