--- a/application/templates/events/new.html
+++ b/application/templates/events/new.html
@@ -1,60 +1,61 @@
 {% extends "layout.html" %} {% block body %}
-<form method="POST" action="{{ url_for('events_create') }}">
-  <table>
+<div class="container">
+  <form method="POST" action="{{ url_for('events_create') }}">
+    <table>
+      <tr>
+        <td>{{ form.name.label }}</td>
+        <td>{{ form.name }}</td>
+        <td>
+          <ul>
+            {% for error in form.name.errors %}
+            <li>{{ error }}</li>
+            {% endfor %}
+          </ul>
+        </td>
+      </tr>
 
-    <tr>
-      <td>{{ form.name.label }}</td>
-      <td>{{ form.name }}</td>
-      <td>
-        <ul>
-          {% for error in form.name.errors %}
-          <li>{{ error }}</li>
-          {% endfor %}
-        </ul>
-      </td>
-    </tr>
+      <tr>
+        <td>{{ form.location.label }}</td>
+        <td>{{ form.location }}</td>
+        <td>
+          <ul>
+            {% for error in form.location.errors %}
+            <li>{{ error }}</li>
+            {% endfor %}
+          </ul>
+        </td>
+      </tr>
 
-    <tr>
-      <td>{{ form.location.label }}</td>
-      <td>{{ form.location }}</td>
-      <td>
-        <ul>
-          {% for error in form.location.errors %}
-          <li>{{ error }}</li>
-          {% endfor %}
-        </ul>
-      </td>
-    </tr>
+      <tr>
+        <td>{{ form.time.label }}</td>
+        <td>{{ form.time }}</td>
+        <td>
+          <ul>
+            {% for error in form.time.errors %}
+            <li>{{ error }}</li>
+            {% endfor %}
+          </ul>
+        </td>
+      </tr>
 
-    <tr>
-      <td>{{ form.time.label }}</td>
-      <td>{{ form.time }}</td>
-      <td>
-        <ul>
-          {% for error in form.time.errors %}
-          <li>{{ error }}</li>
-          {% endfor %}
-        </ul>
-      </td>
-    </tr>
+      <tr>
+        <td>{{ form.date.label }}</td>
+        <td>{{ form.date }}</td>
+        <td>
+          <ul>
+            {% for error in form.date.errors %}
+            <li>{{ error }}</li>
+            {% endfor %}
+          </ul>
+        </td>
+      </tr>
 
-    <tr>
-      <td>{{ form.date.label }}</td>
-      <td>{{ form.date }}</td>
-      <td>
-        <ul>
-          {% for error in form.date.errors %}
-          <li>{{ error }}</li>
-          {% endfor %}
-        </ul>
-      </td>
-    </tr>
-
-    <tr>
-      <td colspan="2">
-        <input type="submit" value="Add a new task" />
-      </td>
-    </tr>
-  </table>
-</form>
+      <tr>
+        <td colspan="2">
+          <input type="submit" value="Add a new task" />
+        </td>
+      </tr>
+    </table>
+  </form>
+</div>
 {% endblock %}
