change texts on form

--- a/application/templates/events/new.html
+++ b/application/templates/events/new.html
@@ -52,7 +52,7 @@
 
       <tr>
         <td colspan="2">
-          <input type="submit" value="Add a new task" />
+          <input type="submit" value="Lisää tapahtuma" />
         </td>
       </tr>
     </table>
