--- a/application/templates/events/modify.html
+++ b/application/templates/events/modify.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %} {% block body %}
-<div class="container">
+<div>
   <form method="POST" action="{{ url_for('event_update', event_id=event.id) }}">
     <div class="form-group">
       {{ form.name.label }}
