--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -11,8 +11,8 @@
     />
   </head>
 
-  <body>
-    <div class="container">
+  <body style="background-color: whitesmoke">
+    <div>
       <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
         <a class="navbar-brand" href="#">Tapahtumakalenteri</a>
         <button
@@ -39,15 +39,30 @@
               </a>
             </li>
           </ul>
+          <div>
+            {% if current_user.is_authenticated %}
+            <p>Kirjautunut nimellä {{ current_user.name }}.</p>
+            <a href="{{ url_for('auth_logout') }}">Kirjaudu ulos</a>"
+            {% else %}
+            <a class="nav-link" href="{{ url_for('auth_login') }} ">
+              <p>Kirjaudu</p>
+            </a>
+            <a class="nav-link" href="{{ url_for('account_create') }} ">
+              <p>Rekisteröidy</p>
+            </a>
+            {% endif %}
+          </div>
         </div>
       </nav>
     </div>
 
-    {% block body %}
-    <p>
-      Content.
-    </p>
-    {% endblock %}
+    <div class="container">
+      {% block body %}
+      <p>
+        Content.
+      </p>
+      {% endblock %}
+    </div>
 
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
