--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -41,14 +41,16 @@
           </ul>
           <div>
             {% if current_user.is_authenticated %}
-            <p>Kirjautunut nimellä {{ current_user.name }}.</p>
-            <a href="{{ url_for('auth_logout') }}">Kirjaudu ulos</a>"
+            <p>
+              Kirjautunut nimellä {{ current_user.name }}.
+              <a href="{{ url_for('auth_logout') }}"><button class="btn btn-danger">Kirjaudu ulos</button></a>
+            </p>
             {% else %}
             <a class="nav-link" href="{{ url_for('auth_login') }} ">
-              <p>Kirjaudu</p>
+              <b>Kirjaudu</b>
             </a>
-            <a class="nav-link" href="{{ url_for('account_create') }} ">
-              <p>Rekisteröidy</p>
+            <a class="nav-link" href="{{ url_for('show_register') }} ">
+              <b>Rekisteröidy</b>
             </a>
             {% endif %}
           </div>
