--- a/application/templates/auth/loginform.html
+++ b/application/templates/auth/loginform.html
@@ -4,28 +4,17 @@
 <div class=container>
     {{ error }}
     <form method="POST" action="{{ url_for('auth_login') }}">
-    <table>
-        <tr>
-        <td>
-        {{ form.username.label }}
-        </td>
-        <td>
-        {{ form.username }}
-        </td>
-        </tr>
-        <tr>
-        <td>
-        {{ form.password.label }}
-        </td>
-        <td>
-        {{ form.password }}
-        </td>
-        </tr>
-        <tr>
-        <td colspan="2">
-        <input type="submit" value="Login"/>
-        </td>
-        </tr>
+        <div class="form-group">
+            {{ form.username.label }}
+            {{ form.username }}
+        </div>
+
+        <div class="form-group">
+            {{ form.password.label }}
+            {{ form.password }}
+        </div>
+
+        <input type="submit" value="Kirjaudu sisään"/>
     </form>
 </div>
 {% endblock %}
