--- a/application/templates/auth/accountform.html
+++ b/application/templates/auth/accountform.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %} {% block body %}
-<div class="container">
+<div>
   <form method="POST" action="{{ url_for('register') }}">
     <div class="form-group">
       {{ form.name.label }}
