--- a/application/templates/events/list.html
+++ b/application/templates/events/list.html
@@ -1,5 +1,23 @@
 {% extends "layout.html" %} {% block body %}
-<div class>
+<div>
+  <div class="row">
+    {% for event in events %}
+      <div class="card">
+        <div class="card-header">
+          {{ event.name }}
+        </div>
+        <div class="card-body">
+          {{ event.location}}
+          <a href="{{ url_for('event_show', event_id=event.id) }}" class="btn btn-primary stretched-link"></a>
+        </div>
+        <div class="card-footer">
+          {{ event.date_time }}
+        </div>
+      </div>
+    {% endfor %}
+  </div>
+</div>
+
   <table>
     <tr>
       <th>Tapahtuma</th>
