--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('events_index') }} ">
+              <a class="nav-link" href="{{ url_for('events_all') }} ">
                 Tapahtumat
               </a>
             </li>
@@ -43,19 +43,25 @@
           </ul>
           <div>
             {% if current_user.is_authenticated %}
-            <p>
+            <div style="color:white">
               Kirjautunut nimellä {{ current_user.name }}.
-              <a href="{{ url_for('auth_logout') }}"
-                ><button class="btn btn-danger">Kirjaudu ulos</button></a
-              >
-            </p>
+              <a href="{{ url_for('auth_logout') }}">
+                <button class="btn btn-outline-danger">Kirjaudu ulos</button>
+              </a>
+            </div>
             {% else %}
-            <a class="nav-link" href="{{ url_for('auth_login') }} ">
-              <b>Kirjaudu</b>
+            <div class="btn-group">
+            <a class="nav-link" role="button" href="{{ url_for('auth_login') }}">
+              <button class="btn btn-outline-success" type="button">
+                <b>Kirjaudu</b>
+              </button>
             </a>
-            <a class="nav-link" href="{{ url_for('show_register') }} ">
-              <b>Rekisteröidy</b>
+            <a class="nav-link" role="button" href="{{ url_for('show_register') }} ">
+              <button class="btn btn-outline-primary" type="button">
+                <b>Rekisteröidy</b>
+              </button>
             </a>
+            </div>
             {% endif %}
           </div>
         </div>
