--- a/application/templates/events/event.html
+++ b/application/templates/events/event.html
@@ -1,57 +1,106 @@
 {% extends "layout.html" %} {% block body %}
-<div
-  class="container"
-  style="width: 60%;background:lightgrey;border-color:black;border-width: 3px"
->
-  <div class="row justify-content-center">
+<div class="container border" style="width: 45%;background:white">
+  <div class="row p-2 m-2 justify-content-center">
     <div class="col-*">
       <h1>{{ event.name }}</h1>
     </div>
   </div>
 
-  <div class="row justify-content-start">
-    <div class="col-2"></div>
-    <div class="col-*">
-      <p>Sijainti</p>
+  <div class="p-2 m-2">
+    <div class="row m-2 justify-content-start" style="font-size: 20px">
+      <div class="col-2"></div>
+      <div class="col-2">
+        <b>Sijainti</b>
+      </div>
+      <div class="col-1"></div>
+      <div class="col-5">
+        {{ event.location }}
+      </div>
     </div>
-    <div class="col-* border rounded" style="background-color: white">
-      {{ event.location }}
+
+    <div class="row m-2 justify-content-start" style="font-size: 20px">
+      <div class="col-2"></div>
+      <div class="col-2">
+        <b>Aika</b>
+      </div>
+      <div class="col-1"></div>
+      <div class="col-7">
+        {{ event.date_time }}
+      </div>
+    </div>
+
+    <div class="row m-2 justify-content-start" style="font-size: 20px">
+      <div class="col-2"></div>
+      <div class="col-2">
+        <b>Osallistujia</b>
+      </div>
+      <div class="col-1"></div>
+      <div class="col-7">
+        {{ event.attendees }}
+        {% if event.attendee_max > 0 %} / {{ event.attendee_max }}
+        {% endif %}
+      </div>
     </div>
   </div>
 
-  <div class="row justify-content-center">
+  <div class="border rounded p-2">
+    <div class="row m-1 p-1 justify-content-start" style="font-size: 20px">
+      <div class="col-*">
+        <h4>Kommentit</h4>
+      </div>
+    </div>
+  
+
+  {% for comment in comments %}
+  <div class="row m-2 justify-content-start" style="font-size: 20px">
+    <div class="col-*">
+      {{ comment.name }} {{ comment.content }}
+    </div>
+  </div>
+  {% endfor %}
+
+  <form method="POST" action="{{ url_for('send_comment', event_id=event.id) }}">
+    <div class="form-group">
+      {{ form.content }}
+      <ul>
+        {% for error in form.content.errors %}
+        <li>{{ error }}</li>
+        {% endfor %}
+      </ul>
+    </div>
+    <button type="submit" class="btn-sm btn-primary">Lähetä</button>
+  </form>
+
+  </div>
+
+  <div class="row justify-content-center" style="margin-top:30px">
     <div class="col-* m-1 p-1" role="group">
-      <button type="button" class="btn btn-lg btn-success">
-        Osallistu
-      </button>
+      <form
+        method="POST"
+        action="{{ url_for('event_join', event_id=event.id) }}"
+      >
+        <button type="submit" class="btn btn-lg btn-success">
+          Osallistu
+        </button>
+      </form>
     </div>
     <div class="col-* m-1 p-1">
-      <button type="button" class="btn btn-lg btn-primary">
-        Muokkaa
-      </button>
+      <a href="{{ url_for('event_edit', event_id=event.id) }}">
+        <button type="button" class="btn btn-lg btn-primary">
+          Muokkaa
+        </button>
+      </a>
     </div>
     <div class="col-* m-1 p-1">
-      <button type="button" class="btn btn-lg btn-danger">
-        Poista
-      </button>
+      <form
+        method="POST"
+        action="{{ url_for('event_delete', event_id=event.id) }}"
+      >
+        <button type="submit" class="btn btn-lg btn-danger">
+          Poista
+        </button>
+      </form>
     </div>
   </div>
 </div>
-
-<!-- <div>
-
-  <p>Aika: {{ event.date_time }}</p>
-  <p>Paikka: {{ event.location }}</p>
-  <p>
-    osallistujia {{ event.attendees }} {% if event.attendee_max > 0%} /
-    {{ event.attendee_max }}
-    {% endif %}
-  </p>
-  <div>
-    <form method="POST" action="{{ url_for('event_join', event_id=event.id) }}">
-      <button type="submit" class="btn btn-success">Ilmoittaudu</button>
-    </form>
-    <a href="{{ url_for('event_edit', event_id=event.id) }}"" class="btn btn-primary">Muokkaa</a>
-  </div>
-</div> -->
 {% endblock %}
