--- a/application/templates/events/event.html
+++ b/application/templates/events/event.html
@@ -3,6 +3,7 @@
 
 <!-- ADMIN TOOLS CONTAINER TODO-->
 <!-- TODO Move to list view -->
+{% if current_user.is_authenticated %}
 <div class="container">
   <div class="row" style="margin-bottom: 4rem">
     <div class="col-4">
@@ -32,6 +33,7 @@
   </div>
   <!-- END OF ADMIN TOOLS -->
 </div>
+{% endif %}
 
 <!-- EVENT CONTAINER -->
 <div class="container rounded h-100 bg-white">
