accommodate templates with new queries

--- a/application/templates/events/event.html
+++ b/application/templates/events/event.html
@@ -66,7 +66,7 @@
           style="width: 48px;height: 48px;position:relative"
         />
         <div style="font-size: 56px;color: black">
-          {{ event.attendees }}
+          {{ attendees }}
           {% if event.attendee_max > 0 %} / {{ event.attendee_max }}
           {% endif %}
         </div>
