--- a/application/templates/events/adminlist.html
+++ b/application/templates/events/adminlist.html
@@ -1,28 +1,42 @@
 {% extends "layout.html" %} {% block body %}
 
 <div>
-    <table class="table">
+  <table class="table">
     <th>Nimi</th>
-    <th>Paikka </th>
+    <th>Paikka</th>
     <th>Aika</th>
     <th>Osallistujia</th>
     <th>Kommentteja</th>
 
     {% for event in events %}
     <tr>
-        <td>{{ event.name }}</td>
-        <td>{{ event.location }}</td>
-        <td>{{ event.date_time }}</td>
-        <td>{{ event.attendCount }}</td>
-        <td>{{ event.commentCount }}</td>
-        <td><a href="{{ url_for('admin_show', event_id=event.id) }}">Yhteenveto</a></td>
-        <td><a href="{{ url_for('event_edit', event_id=event.id) }}">Muokkaa</a></td>
-        <td><a href="{{ url_for('event_delete', event_id=event.id) }}">Poista</a></td>
+      <td>{{ event.name }}</td>
+      <td>{{ event.location }}</td>
+      <td>{{ event.date_time }}</td>
+      <td>{{ event.attendeeCount }}</td>
+      <td>{{ event.commentCount }}</td>
+      <td>
+        <a href="{{ url_for('admin_show', event_id=event.id) }}">
+          <button class="btn btn-sm btn-warning">Yhteenveto</button>
+        </a>
+      </td>
+      <td>
+        <a href="{{ url_for('event_edit', event_id=event.id) }}">
+          <button class="btn btn-sm btn-primary">Muokkaa</button>
+        </a>
+      </td>
+      <td>
+        <form
+          method="POST"
+          action="{{ url_for('event_delete', event_id=event.id) }}"
+        >
+          <button type="submit" class="btn btn-sm btn-danger">Poista</button>
+        </form>
+      </td>
     </tr>
 
     {% endfor %}
-    </table>
-
+  </table>
 </div>
 
 {% endblock %}
