--- a/application/templates/events/details.html
+++ b/application/templates/events/details.html
@@ -9,7 +9,7 @@
   <h2>Osallistujat</h2>
 
   <table class="table">
-    <thead class="thead-dark">
+    <thead class="thead-light">
       <tr>
         <th>
           Nimi
@@ -29,11 +29,13 @@
   <h2>Tapahtuman kommentit</h2>
 
   <table class="table">
-    <thead class="thead-dark">
+    <thead class="thead-light">
       <tr>
         <th>Kirjoittaja</th>
         <th>Kommentti</th>
         <th>Ajankohta</th>
+        <th> </th>
+        <th> </th>
       </tr>
     </thead>
     {% for comment in comments %}
