--- a/application/templates/comments/edit.html
+++ b/application/templates/comments/edit.html
@@ -1,14 +1,16 @@
 {% extends "layout.html" %} {% block body %}
 <div>
-    <h2>Kommentin muokkaus</h2>
-    <p>Kirjoittaja: </p>
-  <form method="POST" action="{{ url_for('comment_edit', comment_id=comment.id) }}">
+  <h2>Kommentin muokkaus</h2>
+  <form
+    method="POST"
+    action="{{ url_for('comment_edit', comment_id=comment.id) }}"
+  >
     <div class="form-group">
-        {{ form.content.label }}
-        {{ form.content(value=comment.content) }}
+      {{ form.content.label }}
+      {{ form.content(value=comment.content) }}
     </div>
     <button class="btn btn-success" type="submit">
-        Tallenna
+      Tallenna
     </button>
   </form>
 </div>
