--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -57,7 +57,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('events_form') }} ">
+              <a class="nav-link" href="{{ url_for('users') }} ">
                 Käyttäjät
               </a>
             </li>
