show event count

--- a/application/templates/events/adminlist.html
+++ b/application/templates/events/adminlist.html
@@ -1,6 +1,12 @@
 {% extends "layout.html" %} {% block body %}
 
 <div>
+  <h2>Tapahtumat</h2>
+
+  <br>
+  <h4>Tapahtumia yhteensä: {{ eventCount }}</h4>
+  <br>
+
   <table class="table">
     <th>Nimi</th>
     <th>Paikka</th>
