remove arbitrary columns

--- a/application/templates/events/list.html
+++ b/application/templates/events/list.html
@@ -10,7 +10,7 @@
         class="stretched-link float-right"
         href="{{ url_for('event_show', event_id=event.id) }}"
       ></a>
-      <div class="col-1 align-self-center">Kuva</div>
+      <div class="col-1 align-self-center"></div>
       <div class="col-3 align-self-center">{{ event.name }}</div>
       <div class="col-3 align-self-center">{{ event.location }}</div>
 
